tests/cases/meta/errors/meta-function-domain-mismatch.ari
meta fn bad(input: token_stream) -> ast {
}

fn main() -> i64 {
  return 0;
}
